2009-08-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am, libmisc/Makefile.am, wrapup/Makefile.am:
	Add new BSP Boot Command Line helper routines. Recently boot_card()
	has grown the ability to have a command line string pointer. These
	routines provide an interface to that string.

2009-08-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: Fix typo.

2009-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/psignalclearsignals.c: Add comments.

2009-08-05	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio_.h,
	libcsupport/src/fs_null_handlers.c: Null handlers are now const.
	* libi2c/libi2c.c, libi2c/libi2c.h: Documentation. Do not create
	semaphores on the fly.
	* cpukit/libblock/src/bdpart.c: Fixed format specifier.
	* cpukit/libblock/include/rtems/bdbuf.h, rtems/include/rtems.h,
	rtems/include/rtems/rtems/asr.h, rtems/include/rtems/rtems/attr.h,
	rtems/include/rtems/rtems/barrier.h,
	rtems/include/rtems/rtems/barriermp.h,
	rtems/include/rtems/rtems/cache.h, rtems/include/rtems/rtems/clock.h,
	rtems/include/rtems/rtems/config.h, rtems/include/rtems/rtems/dpmem.h,
	rtems/include/rtems/rtems/event.h,
	rtems/include/rtems/rtems/eventmp.h,
	rtems/include/rtems/rtems/eventset.h,
	rtems/include/rtems/rtems/intr.h, rtems/include/rtems/rtems/message.h,
	rtems/include/rtems/rtems/modes.h, rtems/include/rtems/rtems/mp.h,
	rtems/include/rtems/rtems/msgmp.h, rtems/include/rtems/rtems/object.h,
	rtems/include/rtems/rtems/part.h, rtems/include/rtems/rtems/partmp.h,
	rtems/include/rtems/rtems/ratemon.h,
	rtems/include/rtems/rtems/region.h,
	rtems/include/rtems/rtems/regionmp.h,
	rtems/include/rtems/rtems/rtemsapi.h, rtems/include/rtems/rtems/sem.h,
	rtems/include/rtems/rtems/semmp.h, rtems/include/rtems/rtems/signal.h,
	rtems/include/rtems/rtems/signalmp.h,
	rtems/include/rtems/rtems/status.h,
	rtems/include/rtems/rtems/support.h,