@@ -1,0 +1,33 @@
+/*
+ *  COPYRIGHT (c) 1989-2009.
+ *  On-Line Applications Research Corporation (OAR).
+ *
+ *  The license and distribution terms for this file may be
+ *  found in the file LICENSE in this distribution or at
+ *  http://www.rtems.com/license/LICENSE.
+ *
+ *  $Id$
+ */
+
+#include <rtems/bspcmdline.h>
+
+#include <stdio.h>
+
+extern const char *bsp_boot_cmdline;
+
+const char *bsp_cmdline_get_param_raw(
+  const char *name
+)
+{
+  const char *p;
+
+  if ( !name )
+    return NULL;
+   
+  if ( !bsp_boot_cmdline )
+    return NULL;
+
+  p = strstr(bsp_boot_cmdline, name);
+  /* printf( "raw: %p (%s)\n", p, p ); */
+  return p;
+}
